wip assembly parsing